negrita fuerte blanco en la frase de portada por Zulema

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4226,6 +4226,10 @@
 				width: calc(100% + 2rem);
 			}
 
-#three, #four, #footer section { display:none}
+	#three, #four, #footer section { display:none}
+
+	#banner b{color:white;font-weight: 900; !important}
 
 		}
+
+
